<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_280sdp"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="456dp"
        android:background="@drawable/bg_curved_rect"
        android:backgroundTint="#C3000000"
        android:gravity="fill_vertical"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="fill_vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:text="@string/did_gamerboard_just_restart"/>


            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:text="@string/gamerboard_app_killed_by_phone"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:paddingTop="15dp"
            android:layout_height="wrap_content">

            <WebView
                android:id="@+id/webView"
                android:layout_weight="1"
                android:layout_width ="0dp"
                android:layout_height="@dimen/_150sdp"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width ="0dp"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"

                android:orientation="vertical"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"

                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/goto_recent_app"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"

                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/device_has_game_booster"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/restart_device"/>


                <Button
                    android:id="@+id/btn_restart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/bg_curved_rect"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:text="@string/restart"
                    android:gravity="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>