<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_320sdp"
    android:layout_height="wrap_content"
    android:background="@color/bg_dark_2"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingVertical="@dimen/_10sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cross"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/share_feedback"
        android:textColor="@color/txt_white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_close" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/improve_exp"
        android:textColor="@color/txt_color"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/bg_dark_3"
        android:gravity="start"
        android:inputType="textCapSentences"
        android:hint="@string/write_your_feedback"
        android:minLines="5"
        android:padding="@dimen/_12sdp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/txt_color"
        android:textColorHint="@color/btn_stroke_light_grey"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@style/StrokeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/btn_submit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_feedback" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        style="@style/SolidButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>