<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_480sdp"
    android:layout_height="wrap_content"
    android:background="@color/bg_dark_2"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingVertical="@dimen/_10sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cross"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tell_experience"
        android:textColor="@color/txt_white"
        android:textFontWeight="700"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/iv_close" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reasons"
        android:layout_width="match_parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_height="wrap_content"
        tools:itemCount="10"
        app:spanCount="2"
        tools:listitem="@layout/item_feedback_reason"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@style/StrokeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/btn_submit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_reasons" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        style="@style/SolidButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>