<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_permission_dialog"
    android:background="@drawable/bg_gradient_white_border"
    android:padding="18dp">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_permissions"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineHeight="18.75sp"
        android:text="@string/permission_title"
        android:textColor="@color/txt_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_autorun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@color/bg_dark_3"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_autostart"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/bg_circle_stroke" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_permission_autostart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/permission_autostart"
                    android:textColor="@color/txt_color"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:id="@+id/layout_app_usage"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/bg_dark_3"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_app_usage"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/bg_circle_stroke" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_app_usage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/permission_app_usage"
                    android:textColor="@color/txt_color"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_accessibility"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/bg_dark_3"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_accessibility"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/bg_circle_stroke" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_accessibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/permission_accessibility"
                    android:textColor="@color/txt_color"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_battery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/bg_dark_3"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_battery"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/bg_circle_stroke" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/permission_battery"
                    android:textColor="@color/txt_color"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_draw_over"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/bg_dark_3"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_draw_over"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/bg_circle_stroke" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_draw_over"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/permission_draw_over_other"
                    android:textColor="@color/txt_color"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_primary_btn"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/cont"
        android:enabled="false"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>